crates/viewer_support/re_dataframe_ui/tests/snapshots/filter_tests__timestamps@not_after_Microsecond.snap
---
source: crates/viewer_support/re_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    filter: Timestamp(
        TimestampFilter(not After 2025-09-23 11:47:00Z),
    ),
    field: Field {
        name: "column",
        data_type: Timestamp(
            Microsecond,
            None,
        ),
    },
    unfiltered: PrimitiveArray<Timestamp(µs)>
    [
      2025-09-23T11:47:00,
      2025-09-23T10:47:00,
      2025-09-22T11:47:00,
      2024-09-23T11:47:00,
      2025-09-23T12:47:00,
      2025-09-24T11:47:00,
      2026-09-23T11:47:00,
    ],
    filtered: PrimitiveArray<Timestamp(µs)>
    [
      2025-09-23T10:47:00,
      2025-09-22T11:47:00,
      2024-09-23T11:47:00,
    ],
}
